add Color and modified fonts

--- a/_css/idGeneratedStyles.css
+++ b/_css/idGeneratedStyles.css
@@ -65,7 +65,7 @@ div.w20c {
 }
 h1.x01-FM-Ad-Card-Head {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Trade Gothic LT Std Cn"*/
+	font-family: sans-monospaced; /*"Trade Gothic LT Std Cn"*/
 	font-size:0.917em;
 	margin: 5% 0 0.36em 0;
 	text-align:center;
@@ -73,7 +73,7 @@ h1.x01-FM-Ad-Card-Head {
 }
 p.x01-FM-Ad-Card-List {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.833em;
 	font-style:italic;
 	margin: 0.4em 0 0 0;
@@ -82,7 +82,7 @@ p.x01-FM-Ad-Card-List {
 }
 p.x01-FM-Copyright-Text {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.667em;
 	margin: 0;
 	text-align:center;
@@ -90,7 +90,7 @@ p.x01-FM-Copyright-Text {
 }
 p.x01-FM-Copyright-Text-Space {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.667em;
 	margin: 1.12em 0 0 0;
 	text-align:center;
@@ -98,7 +98,7 @@ p.x01-FM-Copyright-Text-Space {
 }
 p.x01-FM-Dedi-Body {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	font-style:italic;
 	margin: 15% 0 0 0;
@@ -109,7 +109,7 @@ p.x01-FM-Dedi-Body {
 
 p.x01-FM-Epigraph {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	font-style:italic;
 	margin: 0 15%;
@@ -119,7 +119,7 @@ p.x01-FM-Epigraph {
 
 p.x01-FM-Epigraph-First {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	font-style:italic;
 	margin: 15% 15% 0 15%;
@@ -129,7 +129,7 @@ p.x01-FM-Epigraph-First {
 
 p.x01-FM-Epigraph-Source-First {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.75em;
 	text-align:right;
 	margin: 0.89em 15% 0 15%;
@@ -137,7 +137,7 @@ p.x01-FM-Epigraph-Source-First {
 }
 h1.x01-FM-Head {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Microgramma Com Medium Extended"*/
+	font-family: sans-monospaced; /*"Microgramma Com Medium Extended"*/
 	font-size:1.25em;
 	font-weight:bold;
 	margin: 15% 0 10% 0;
@@ -147,7 +147,7 @@ h1.x01-FM-Head {
 }
 h1.x02-Part-Title {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Microgramma Com Medium Extended"*/
+	font-family: sans-monospaced; /*"Microgramma Com Medium Extended"*/
 	font-size:1.5em;
 	font-weight:bold;
 	margin: 15% 0 0 0;
@@ -159,14 +159,14 @@ h1.x02-Part-Title {
 
 p.x03-CO-Body-Text {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 10% 0 0 0;
 	text-indent:0;
 }
 h2.x03-Chapter-Number {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Microgramma Com Medium Extended"*/
+	font-family: sans-monospaced; /*"Microgramma Com Medium Extended"*/
 	font-size:1.5em;
 	font-weight:bold;
 	margin: 15% 0 10% 0;
@@ -176,28 +176,28 @@ h2.x03-Chapter-Number {
 }
 p.x04-Body-Text {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 0;
 	text-indent:1.59em;
 }
 p.x04-Body-Text-FL {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 0;
 	text-indent:0;
 }
 p.x04-Space-Break-FL {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 0;
 	text-indent:0;
 }
 p.x04-Space-Break-Orn {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 1.06em 0;
 	page-break-after:avoid;
@@ -208,7 +208,7 @@ p.x04-Space-Break-Orn {
 
 p.x06-E-mail-Closing {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*Arial*/
+	font-family: sans-monospaced; /*Arial*/
 	font-size:0.667em;
 	margin: 1em 20% 2.37em 10%;
 	text-align:right;
@@ -216,21 +216,21 @@ p.x06-E-mail-Closing {
 }
 p.x06-E-mail-Salutation {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*Arial*/
+	font-family: sans-monospaced; /*Arial*/
 	font-size:0.708em;
 	margin: 0.94em 2.59em 0.82em 2.59em;
 	text-indent:0;
 }
 p.x06-E-mail-Text {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*Arial*/
+	font-family: sans-monospaced; /*Arial*/
 	font-size:0.708em;
 	margin: 0 2.59em;
 	text-indent:2.12em;
 }
 p.x06-E-mail-Text-First {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*Arial*/
+	font-family: sans-monospaced; /*Arial*/
 	font-size:0.708em;
 	margin: 0 2.59em;
 	text-indent:0;
@@ -239,7 +239,7 @@ p.x06-E-mail-Text-First {
 
 p.x06-Letter-Closing {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.833em;
 	font-style:italic;
 	text-align:right;
@@ -248,7 +248,7 @@ p.x06-Letter-Closing {
 }
 p.x06-Letter-Salutation {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.75em;
 	font-style:italic;
 	margin: 0.78em 3em 0 3.6em;
@@ -256,7 +256,7 @@ p.x06-Letter-Salutation {
 }
 p.x06-Letter-Text {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.833em;
 	font-style:italic;
 	margin: 0 3.3em;
@@ -264,7 +264,7 @@ p.x06-Letter-Text {
 }
 p.x06-Letter-Text-1P {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.833em;
 	font-style:italic;
 	margin: 0.8em 3.3em;
@@ -272,7 +272,7 @@ p.x06-Letter-Text-1P {
 }
 p.x12-Figure-Callout {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:2.5em;
 	margin: .35em 0;
 	text-align:center;
@@ -280,7 +280,7 @@ p.x12-Figure-Callout {
 }
 p.x12-Figure-Title {
 	/*color:#221e1f;*/
-	font-family: serif; /*Promemoria*/
+	font-family: monospaced; /*Promemoria*/
 	font-size:1.083em;
 	margin: 1.46em 0 .2em 0;
 	text-align:center;
@@ -288,7 +288,7 @@ p.x12-Figure-Title {
 }
 p.x12-Figure-Title-2 {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Promemoria Italic"*/
+	font-family: sans-monospaced; /*"Promemoria Italic"*/
 	font-size:1.083em;
 	margin: 0 0 1.46em 0;
 	text-align:center;
@@ -296,7 +296,7 @@ p.x12-Figure-Title-2 {
 }
 p.x12-Trefoil-Logo {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:2.5em;
 	margin: 0;
 	text-align:center;
@@ -304,14 +304,14 @@ p.x12-Trefoil-Logo {
 }
 p.x13-BM-About-Au {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.875em;
 	margin: 0 2.29em;
 	text-indent:0;
 }
 h1.x13-BM-About-Au-Head {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.917em;
 	margin: 15% 0 10% 0;
 	text-align:center;
@@ -319,14 +319,14 @@ h1.x13-BM-About-Au-Head {
 }
 p.x13-BM-Ack {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 0;
 	text-indent:1.59em;
 }
 h1.x13-BM-Ack-Head {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Microgramma Com Medium Extended"*/
+	font-family: sans-monospaced; /*"Microgramma Com Medium Extended"*/
 	font-size:1.25em;
 	font-weight:bold;
 	margin: 15% 0 10% 0;
@@ -336,34 +336,34 @@ h1.x13-BM-Ack-Head {
 }
 p.x13-BM-Acks-First {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.942em;
 	margin: 0.71em 0 0 0;
 	text-indent:0;
 }
 p.x13-BM-Biblio {
 	/*color:#221e1f;*/
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-size:0.917em;
 	margin: 0.82em 0 0 0;
 	text-indent:0;
 }
 span._3-CO-1st-Phrase {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Trade Gothic LT Std Bold"*/
+	font-family: sans-monospaced; /*"Trade Gothic LT Std Bold"*/
 	font-size:0.917em;
 	font-weight:bold;
 }
 span.SUP {
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 }
 span.SUP-ITAL {
-	font-family: serif; /*"Electra LT Std"*/
+	font-family: monospaced; /*"Electra LT Std"*/
 	font-style:italic;
 }
 span.Stickup-Cap {
 	/*color:#221e1f;*/
-	font-family: sans-serif; /*"Trade Gothic LT Std Bold"*/
+	font-family: sans-monospaced; /*"Trade Gothic LT Std Bold"*/
 	font-size:1.333em;
 	font-weight:bold;
 	line-height:0;
@@ -371,7 +371,7 @@ span.Stickup-Cap {
 ._idGenDropcap-1 {
 	/*color:#221e1f;*/
 	float:left;
-	font-family: sans-serif; /*"Trade Gothic LT Std Cn"*/
+	font-family: sans-monospaced; /*"Trade Gothic LT Std Cn"*/
 	font-size:2.937em;
 	font-weight:bold;
 	margin-bottom:-0.45em;
