--- a/_static/theme_overrides.css
+++ b/_static/theme_overrides.css
@@ -40,12 +40,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-a:link {
-  color: #990000;
+a:link {black#990000;
 }
 
 a:visited {
-	 color: #990000;
+	 color: black;
 }
 
 .wy-menu-vertical{
